--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
-  "name": "Brommarly",
-  "description": "Replace corporate language with bro talk",
-  "version": "1.0",
   "manifest_version": 3,
+  "name": "Textarea Overlay",
+  "version": "1.0",
+  "description": "Shows clickable overlays on textareas",
+  "permissions": ["activeTab"],
   "action": {
-    "default_popup": "./src/index.html",
-    "default_icon": "./src/logo.png"
-  }
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
 }
