refactor(manifest): Update file paths in manifest.json for better organization

--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
   "description": "Shows clickable overlays on textareas",
   "permissions": ["activeTab", "storage"],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "./src/popup.html"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["./src/content.js"]
     }
   ]
 }
