style: Update title and description for Chad in manifest and popup files

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Textarea Overlay",
+  "name": "Chad",
   "version": "1.0",
-  "description": "Shows clickable overlays on textareas",
+ "description": "Personal AI assistant",
   "permissions": ["activeTab", "storage"],
   "action": {
     "default_popup": "./src/popup.html"
