--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Chad",
   "version": "1.0",
- "description": "Personal AI assistant",
+ "description": "A personal AI assistant that seamlessly embeds into every text area",
   "permissions": ["activeTab", "storage"],
   "action": {
     "default_popup": "./src/popup.html"
