--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chad",
-  "version": "1.0.6",
+  "version": "0.0.1",
   "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-blue.svg)](https://github.com/wajeht/bro/blob/main/LICENSE) [![Open Source Love svg1](https://badges.frapsoft.com/os/v1/open-source.svg?v=103)](https://github.com/wajeht/bro)",
   "private": true,
   "directories": {
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "zip": "node scripts/zip.js",
+    "clean": "node scripts/clean.js",
     "rmds": "find . -name '.DS_Store' -delete"
   },
   "keywords": [
