--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chad",
   "version": "1.0.0",
-  "description": "[![License: MIT](https://img.shields.io/badge/License-MIT-blue.svg)](https://github.com/wajeht/bro/blob/main/LICENSE) [![Open Source Love svg1](https://badges.frapsoft.com/os/v1/open-source.svg?v=103)](https://github.com/wajeht/bro)",
+  "description": "A personal AI assistant that seamlessly embeds into every text area",
   "private": true,
   "directories": {
     "doc": "docs"
