ci: Enable fail-fast option in CI workflow configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         node-version: [22.x]
+      fail-fast: true
 
     steps:
       - uses: actions/checkout@v3
