--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A personal AI assistant that seamlessly embeds into every text area",
   "private": true,
+  "type": "module",
   "directories": {
     "doc": "docs"
   },
